--- a/package.json
+++ b/package.json
@@ -11,14 +11,24 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@mui/material": "^5.10.17",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.0",
     "@types/node": "18.11.14",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "@types/react-router-dom": "^5.3.3",
+    "cors": "^2.8.5",
+    "daisyui": "^2.45.0",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "next": "13.0.6",
     "next-auth": "^4.18.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-router-dom": "^6.4.5",
+    "sort-by": "^1.2.0",
+    "sweetalert2": "^11.6.15",
+    "sweetalert2-react-content": "^5.0.7",
     "typescript": "4.9.4"
   },
   "devDependencies": {
