--- a/package.json
+++ b/package.json
@@ -13,18 +13,33 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.0",
+    "@mui/x-data-grid": "^5.17.14",
+    "@react-hook/debounce": "^4.0.0",
+    "@reduxjs/toolkit": "^1.9.1",
+    "@sendgrid/mail": "^7.7.0",
     "@types/node": "18.11.14",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.2.1",
+    "chart.js": "^4.1.0",
+    "cookie": "^0.5.0",
     "cors": "^2.8.5",
     "daisyui": "^2.45.0",
+    "formik": "^2.2.9",
+    "formik-material-ui": "^4.0.0-alpha.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "moment": "^2.29.4",
     "next": "13.0.6",
     "next-auth": "^4.18.6",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.0.1",
     "react-dom": "18.2.0",
+    "react-iframe": "^1.8.5",
+    "react-moment": "^1.1.2",
+    "react-number-format": "^5.1.2",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.5",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.6.15",
