--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.2.1",
     "chart.js": "^4.1.0",
+    "classnames": "^2.3.2",
     "cookie": "^0.5.0",
     "cors": "^2.8.5",
     "daisyui": "^2.45.0",
