--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.11.0",
     "@mui/x-data-grid": "^5.17.14",
     "@react-hook/debounce": "^4.0.0",
+    "@react-oauth/google": "^0.5.1",
     "@reduxjs/toolkit": "^1.9.1",
     "@sendgrid/mail": "^7.7.0",
     "@types/node": "18.11.14",
@@ -30,6 +31,8 @@
     "daisyui": "^2.45.0",
     "formik": "^2.2.9",
     "formik-material-ui": "^4.0.0-alpha.2",
+    "gapi-script": "^1.2.0",
+    "googleapis": "^110.0.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "moment": "^2.29.4",
@@ -38,6 +41,7 @@
     "react": "18.2.0",
     "react-chartjs-2": "^5.1.0",
     "react-dom": "18.2.0",
+    "react-google-login": "^5.2.2",
     "react-icons": "^4.7.1",
     "react-iframe": "^1.8.5",
     "react-moment": "^1.1.2",
