--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-oauth/google": "^0.5.1",
     "@reduxjs/toolkit": "^1.9.1",
     "@sendgrid/mail": "^7.7.0",
+    "@tinymce/tinymce-react": "^4.3.0",
     "@types/node": "18.11.14",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
