--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-iframe": "^1.8.5",
     "react-moment": "^1.1.2",
     "react-number-format": "^5.1.2",
+    "react-paginate": "^8.1.4",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.5",
     "sort-by": "^1.2.0",
